# psh

./: .gitignore  README.md  datetime_ggok.html  main.py  main.spy  mypy.ini  off-pyrightconfig.json  ptw.sh  pyproject.toml  pyrightconfig.json  test 777.yaml  tox.ini  tst.txt
assets/: logger_assets.py
assets/logrich/: logger_.py  logger_assets.py
logrich/: logger_.py
scripts/: conftest.py  docker_ps.py  ll.py  tst.py
scripts/assets/: tools.py
scripts/tests/: dps_mock.txt  test_dps.py  test_ll.py
tests/: conftest.py  dps.txt  dps_mock.txt  test_dps.py  test_ll.py
