[tool.poetry]
name = "psh"
version = "0.1.0"
description = "shell command in python"
authors = ["Mavlin Dm. <mavlind@list.ru>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.7.16"
# python = "^3.6.3"
# rich = "^12.6.0"
sh = "^1.14.3"
rich = "^12.6.0"
loguru = "0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
# pytest-watch = "^4.2.0"
# pytest = "^7.2.0"
# logrich = "^0.3.4"
# loguru = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
