[tool.poetry]
name = "psh"
version = "0.1.0"
description = "shell command in python"
authors = ["Mavlin Dm. <mavlind@list.ru>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.7.16"
sh = "^1.14.3"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
loguru = "0.6"
mypy = "^0.991"
black = "^22.12.0"
pytest-picked = "^0.4.6"
watchdog = "^2.2.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
quiet = true
fast = true
